# INE5420

./: .flake8  .gitignore  README.md  pyproject.toml
src/: displayFile.py  main.py  transformation.py  viewport.py  window.py
src/io_files/wavefront_obj/: __init__.py  mtllib.py
src/objects/: bezier_curve.py  bezier_surface.py  bspline_curve.py  bspline_surface.py  clipping.py  factory.py  geometricObject.py  line.py  linked_list.py  object3D.py  point.py  point3D.py  polygon.py  wireframe.py
src/ui/: about.py  aboutDialog.py  createObject.py  createObjectDialog.py  mainWindow.py  transform.py  transformDialog.py
ui/: about.ui  createObject.ui  main.ui  transform.ui
