[tool.poetry]
name = "bländär"
version = "0.1.0"
description = "A project for Computer Graphics class"
authors = ["André Zanghelini", "Marcos Andrei Dranka"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyqt6 = "^6.5.2"

[tool.poetry.group.dev.dependencies]
mypy = "^1.5.1"
flake8 = "^6.1.0"
flake8-bugbear = "^23.7.10"
flake8-builtins = "^2.1.0"
flake8-commas = "^2.1.0"
flake8-comprehensions = "^3.14.0"
flake8-eradicate = "^1.5.0"
flake8-multiline-containers = "^0.0.19"
pep8-naming = "^0.13.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
